[gd_scene load_steps=17 format=2]

[ext_resource path="res://FirstPerson.gd" type="Script" id=1]
[ext_resource path="res://Gun2.tscn" type="PackedScene" id=2]
[ext_resource path="res://Gun1.tscn" type="PackedScene" id=3]
[ext_resource path="res://simpleknife.obj" type="ArrayMesh" id=4]
[ext_resource path="res://cros3.png" type="Texture" id=5]
[ext_resource path="res://Hand.gd" type="Script" id=6]
[ext_resource path="res://Gun3.tscn" type="PackedScene" id=7]
[ext_resource path="res://Weapon/Primary/Snipers/FullScreenScope_1920x1080.png" type="Texture" id=8]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 1.5

[sub_resource type="CapsuleMesh" id=2]
radius = 0.5
mid_height = 1.5

[sub_resource type="BoxShape" id=3]

[sub_resource type="Animation" id=4]
resource_name = "Attack"
length = 0.05
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Camera/MelleWeapon:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -70, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Camera/MelleWeapon:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Return"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Camera/MelleWeapon:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -21, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "ADS"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Camera:fov")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 70.0, 20.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/HUD/ADSoverlay:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/HUD/ADSoverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ViewportContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Head/Camera:fov")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 70.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/HUD/ADSoverlay:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Head/Camera/Hand:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Head/Camera/Hand/Gun3:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="FP" type="Spatial"]

[node name="FirstPerson" type="KinematicBody" parent="." groups=["Player"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="FirstPerson"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="FirstPerson"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )

[node name="Head" type="Spatial" parent="FirstPerson"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.23094, 0 )

[node name="Camera" type="Camera" parent="FirstPerson/Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.664997, -0.381112 )

[node name="TextureRect" type="TextureRect" parent="FirstPerson/Head/Camera"]
visible = false
margin_left = 940.0
margin_top = 580.0
margin_right = 980.0
margin_bottom = 620.0
texture = ExtResource( 5 )

[node name="Hand" type="Spatial" parent="FirstPerson/Head/Camera"]
transform = Transform( 1, 0, 0, 0, 0.999881, -0.0154107, 0, 0.0154106, 0.999882, 0.005, -0.185, -0.399 )
script = ExtResource( 6 )
deafault_position = Vector3( 0.173, -0.236, -0.422 )
deafault2_position = Vector3( 0.219, -0.239, -0.655 )
ads_position = Vector3( 0, -0.099, -0.023 )
ads2_position = Vector3( 0, -0.127, -0.695 )
ads3_position = Vector3( 0.005, -0.175, -0.399 )
deafault3_position = Vector3( 0.233, -0.305, -0.695 )

[node name="Gun1" parent="FirstPerson/Head/Camera/Hand" instance=ExtResource( 3 )]

[node name="Gun2" parent="FirstPerson/Head/Camera/Hand" instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )

[node name="Gun3" parent="FirstPerson/Head/Camera/Hand" instance=ExtResource( 7 )]
transform = Transform( -9.23538e-09, -0.00325597, -0.211256, 0.00325599, 0.211231, -0.0032556, 0.211256, -0.00325558, 5.01675e-05, 0, -0.204982, 0.00315881 )

[node name="RayContainer" type="Spatial" parent="FirstPerson/Head/Camera"]

[node name="RayCast" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast2" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast3" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast4" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast5" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast6" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast7" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast8" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast9" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast10" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast11" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast12" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast13" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast14" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast15" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast16" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast17" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast18" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast19" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast20" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast21" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast22" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast23" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast24" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast25" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast26" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast27" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast28" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast29" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast30" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast31" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast32" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast33" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast34" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast35" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast36" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast37" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast38" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast39" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast40" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast41" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast42" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast43" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast44" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast45" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast46" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast47" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast48" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast49" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast50" type="RayCast" parent="FirstPerson/Head/Camera/RayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="RayCast" type="RayCast" parent="FirstPerson/Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00671959, 0.00635731, 0.000440419 )
enabled = true
cast_to = Vector3( 0, 0, -1000 )

[node name="HitBox" type="Area" parent="FirstPerson/Head/Camera"]

[node name="CollisionShape" type="CollisionShape" parent="FirstPerson/Head/Camera/HitBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2, 0, -0.37564, -2.32198 )
shape = SubResource( 3 )

[node name="MelleWeapon" type="Spatial" parent="FirstPerson/Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.334, -0.374, -0.608 )
visible = false

[node name="Knife" type="MeshInstance" parent="FirstPerson/Head/Camera/MelleWeapon"]
transform = Transform( -0.387228, 0, 3.38525e-08, 0, 0.257778, 0, -3.38525e-08, 0, -0.387228, 9.53674e-07, 0, -9.53674e-07 )
mesh = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="FirstPerson"]
anims/Attack = SubResource( 4 )
anims/RESET = SubResource( 5 )
anims/Return = SubResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="FirstPerson"]

[node name="HUD" type="Control" parent="FirstPerson/CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ADSoverlay" type="TextureRect" parent="FirstPerson/CanvasLayer/HUD"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1880.0
margin_bottom = 1162.0
texture = ExtResource( 8 )
expand = true

[node name="ViewportContainer" type="ViewportContainer" parent="FirstPerson/CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0

[node name="AnimationPlayer2" type="AnimationPlayer" parent="FirstPerson"]
anims/ADS = SubResource( 7 )
anims/RESET = SubResource( 8 )
